# learning-c

./: .gitignore  CMakeLists.txt  README.md
src/c/: main.c
